tests/java: smoke test through the Java ADBC driver manager
Adds a standalone Maven project that loads build/libadbc_driver_odbc.so
through org.apache.arrow.adbc:adbc-driver-jni 0.24.0 -- the ADBC Java
binding that ships the native driver manager in its jar -- points it at
the SQLite ODBC driver, and asserts on the Arrow data that comes back:

- createInsertSelect: CREATE/INSERT/SELECT read out of a VectorSchemaRoot,
  checking column names, integers, a SQL NULL that stays null, and
  "hello + party popper" surviving the ODBC UTF-16 -> Arrow UTF-8 conversion
  (non-BMP, so a surrogate pair in Java).
- parameterisedInsertAndSelect: a three-row bound VectorSchemaRoot for a
  prepared INSERT (3 rows affected), then a single-row bind for
  SELECT ... WHERE id = ?.
- errorCarriesAMessage: the ODBC diagnostic survives the trip through JNI.

Each test closes its RootAllocator, which throws if any Arrow buffer leaked;
that is what caught the AdbcStatementBind schema-ownership bug fixed in the
previous commit.

Runs in docker (maven:3-eclipse-temurin-21 + apt-get install unixodbc), so
no JDK or Maven is needed on the host; tests/java/README.md has the exact
command. README.md grows a "Use from Java" section whose snippet is compiled
(never run) as ReadmeSnippet.java so it cannot rot, mirroring tests/rust.